--- a/change.css
+++ b/change.css
@@ -2,6 +2,6 @@
   background-color: black; color: white;
 }
 
-table {
-  background-color: grey; border-color: black;
+table, tr, th {
+  border: 1px solid black;
 }
